developing offert section

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "animations";
 @import "base";
+@import "utils";
 
 @import "Components/header";
 @import "Components/menu";
