--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -76,6 +76,24 @@ body {
   display: flex;
   flex-direction: column; }
 
+.primary {
+  color: #46948f; }
+
+.secondary {
+  color: #469468; }
+
+.tertiary {
+  color: #94464b; }
+
+.b-primary {
+  background-color: #46948f; }
+
+.b-secondary {
+  background-color: #469468; }
+
+.b-tertiary {
+  background-color: #94464b; }
+
 .header {
   width: 90%;
   margin: 0 auto;
@@ -179,7 +197,8 @@ body {
   border-top: 1px solid rgba(190, 144, 147, 0.6);
   border-bottom: 1px solid rgba(190, 144, 147, 0.6);
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  z-index: 99; }
   .menu__item {
     font-family: "Rajdhani", sans-serif;
     text-transform: uppercase;
@@ -946,6 +965,62 @@ body {
         font-weight: 300;
         border-radius: 3px;
         transform: scale(1.2); }
+  .offert__section--price {
+    width: 50%;
+    margin: 5rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .offert__section--price-left {
+      align-self: flex-start; }
+    .offert__section--price-right {
+      align-self: flex-end; }
+    .offert__section--price p {
+      font-family: "Poiret One", cursive;
+      font-size: 2rem;
+      color: #2a5855;
+      font-weight: 700; }
+    .offert__section--price h3 {
+      font-family: "Orbitron", sans-serif;
+      font-size: 10rem;
+      text-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.3); }
+      .offert__section--price h3 sup {
+        font-size: 50%; }
+  .offert__section--description {
+    display: grid;
+    grid-template-columns: 35% 1fr;
+    grid-gap: 2rem;
+    font-family: "Poiret One", cursive;
+    font-size: 2rem;
+    letter-spacing: .2rem; }
+    @media only screen and (max-width: 40.5em) {
+      .offert__section--description {
+        grid-template-columns: 45% 1fr; } }
+    .offert__section--description > * {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .offert__section--description h3 {
+      grid-column: 1/3;
+      font-family: "Poiret One", cursive;
+      font-size: 4.5rem; }
+    .offert__section--description-left {
+      grid-column: 1/2;
+      color: white;
+      border-radius: 5px;
+      font-weight: 700;
+      height: 6rem;
+      margin: auto 0; }
+      @media only screen and (max-width: 26em) {
+        .offert__section--description-left {
+          height: 10rem;
+          text-align: center; } }
+    .offert__section--description-right {
+      grid-column: 2/3;
+      color: #0e1d1c;
+      font-weight: 700;
+      font-size: 1.8rem; }
 
 .offert__starter h1 {
   background-color: #2a5855; }
