--- a/client/src/sass/Components/_menu.scss
+++ b/client/src/sass/Components/_menu.scss
@@ -5,6 +5,7 @@
 	border-bottom: 1px solid rgba($color-tertiary-light,.6);
 	display:flex;
 	justify-content: space-between;
+	z-index: 99;
 
 
 	&__item{
