--- a/client/src/sass/Components/_footer.scss
+++ b/client/src/sass/Components/_footer.scss
@@ -34,12 +34,15 @@
 			flex:0 0 50%;
 			display:flex;
 			flex-direction: column;
-			padding:2rem;
+			padding:0 2rem 2rem 2rem;
+
 
 			&-logo{
 				&>*{
 					width:20rem;
 					height:20rem;
+					margin-top: -2rem;
+					filter:contrast(200%);
 				}
 
 			}
@@ -53,6 +56,9 @@
 				background-clip: text;
 				color:rgba(#d4d7d0,1);
 				text-shadow: .3rem .3rem .5rem rgba(0,0,0,.1);
+				@include respond(xs){
+					font-size: 8rem;
+				}
 			}
 			&-subname{
 				z-index: 9;
@@ -63,6 +69,9 @@
 				font-size: 2.6rem;
 				color:rgba(#d4d7d0,1);
 				text-shadow: .3rem .3rem .5rem rgba(0,0,0,.1);
+				@include respond(xs){
+					font-size: 4rem;
+				}
 			}
 			&-social{
 				list-style: none;
@@ -79,6 +88,9 @@
 						transform:scale(1.3);
 						color:$color-primary;
 					}
+					@include respond(xs){
+						font-size: 4rem;
+					}
 				}
 			}
 			&-phone{
@@ -94,12 +106,18 @@
 				&:hover{
 					color:#FFFF4D;
 				}
+				@include respond(xs){
+					font-size: 2.8rem;
+				}
 
 				&-i{
 					font-size: 2.4rem;
 					margin-right: 2rem;
 					color:$color-secondary-light;
 					filter:contrast(150%);
+					@include respond(xs){
+						font-size: 2.5rem;
+					}
 				}
 
 			}
@@ -116,11 +134,17 @@
 				&:hover{
 					color:#FFFF4D;
 				}
+				@include respond(xs){
+					font-size: 2.8rem;
+				}
 				&-i{
 					font-size: 2.4rem;
 					margin-right: 2rem;
 					color:$color-tertiary-light;
 					filter:contrast(150%);
+					@include respond(xs){
+						font-size: 2.5rem;
+					}
 				}
 				
 			}
@@ -133,12 +157,18 @@
 					margin-right: 1rem;
 					color:$color-primary-light;
 					filter:contrast(150%);
+					@include respond(xs){
+						font-size: 2.5rem;
+					}
 				}
 
 				li{
 					font-family: $font-poiret;
 					font-size: 2rem;
 					color:white;
+					@include respond(xs){
+						font-size: 2.5rem;
+					}
 				}
 				&>*:not(:first-child){
 					margin-left: 4rem;
@@ -154,6 +184,7 @@
 			flex-direction: column;
 			@include respond(xs){
 				margin-top: 5rem;
+				width:90%;
 			}
 
 			&-header{
