--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "Components/packages";
 @import "Components/reviews";
 @import "Components/footer";
+@import "Components/manager";
 
 @import "Components/about";
 @import "Components/offert";
