--- a/client/src/sass/Components/_offert.scss
+++ b/client/src/sass/Components/_offert.scss
@@ -46,6 +46,20 @@
 		}
 	}
 
+	&__short{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin:10rem 2rem 5rem 2rem;
+
+		&--para{
+			font-family: $font-rajdhani;
+			font-size:2.8rem;
+			text-shadow: $shadow-text-small;
+			text-transform: uppercase; 
+		}
+	}
+
 	&__section{
 		padding:10rem 2rem;
 		
@@ -132,6 +146,7 @@
 			display:grid;
 			grid-template-columns: 35% 1fr;
 			grid-gap: 2rem;
+			grid-row-gap: 5rem;
 			font-family: $font-poiret;
 			font-size: 2rem;
 			letter-spacing: .2rem;
@@ -162,8 +177,12 @@
 				height:6rem;
 				margin:auto 0;
 
+				@include respond(s){
+					margin:0;
+				}
+
 				@include respond(xs){
-					height:10rem;
+					height:8rem;
 					text-align: center;
 				}
 			}
