--- a/client/src/sass/Components/_footer.scss
+++ b/client/src/sass/Components/_footer.scss
@@ -259,3 +259,13 @@
 	}
 
 }
+
+.confirmation{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100vw;
+	height:100vh;
+	background-color: white;
+	z-index: 199;
+}
