--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -786,17 +786,22 @@ body {
 
 .manager__section {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  background-color: #7db4b0;
+  margin: 5rem auto;
+  width: 90%; }
   .manager__section h1 {
+    font-family: "Orbitron", sans-serif;
+    font-weight: 900;
+    text-transform: uppercase;
     font-size: 3rem;
     text-align: center; }
   .manager__section--artikel {
-    background-color: #7db4b0;
     margin: 5rem auto;
     width: 100%;
     padding: 2rem; }
     .manager__section--artikel h3 {
-      font-family: "Orbitron", sans-serif;
+      font-family: "Rajdhani", sans-serif;
       font-size: 2rem;
       font-weight: 900;
       text-transform: uppercase; }
