--- a/client/src/sass/Components/_manager.scss
+++ b/client/src/sass/Components/_manager.scss
@@ -1,22 +1,29 @@
 .manager{
+	
 
 	&__section{
 		
 		display: flex;
 		flex-direction: column;
+		background-color: $color-primary-light;
+		margin:5rem auto;
+		width:90%;
 
 		h1{
+			font-family: $font-orbitron;
+			font-weight: 900;
+			text-transform: uppercase;
 			font-size: 3rem;
 			text-align: center;
 		}
 
 		&--artikel{
-			background-color: $color-primary-light;
+			
 			margin:5rem auto;
 			width:100%;
 			padding:2rem;
 			h3{
-				font-family: $font-orbitron;
+				font-family: $font-rajdhani;
 				font-size: 2rem;
 				font-weight: 900;
 				text-transform: uppercase;
