--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -797,7 +797,7 @@ body {
     font-size: 3rem;
     text-align: center; }
   .manager__section--artikel {
-    margin: 5rem auto;
+    margin: 5rem auto 0 auto;
     width: 100%;
     padding: 2rem; }
     .manager__section--artikel h3 {
@@ -810,12 +810,18 @@ body {
       font-size: 2.5rem;
       text-align: center;
       letter-spacing: .2rem; }
-    .manager__section--artikel input {
+    .manager__section--artikel textarea {
       width: 100%;
       padding: 1rem 2rem;
       text-align: center;
       font-family: "Rajdhani", sans-serif;
-      font-size: 2.5rem; }
+      font-size: 2.5rem;
+      border: none;
+      background-color: #f6f9f9;
+      border-radius: 3px; }
+      .manager__section--artikel textarea:focus {
+        outline: none;
+        box-shadow: 0 0 1rem #94464b; }
 
 .about {
   overflow: hidden; }
