--- a/client/src/sass/Components/_manager.scss
+++ b/client/src/sass/Components/_manager.scss
@@ -19,7 +19,7 @@
 
 		&--artikel{
 			
-			margin:5rem auto;
+			margin:5rem auto 0 auto;
 			width:100%;
 			padding:2rem;
 			h3{
@@ -34,12 +34,20 @@
 				text-align: center;
 				letter-spacing: .2rem;
 			}
-			input{
+			textarea{
 				width:100%;
 				padding: 1rem 2rem;
 				text-align: center;
 				font-family: $font-rajdhani;
 				font-size: 2.5rem;
+				border:none;
+				background-color: $color-primary-light-3;
+				border-radius: 3px;
+
+				&:focus{
+					outline:none;
+					box-shadow: 0 0 1rem $color-tertiary;
+				}
 			}
 		}
 	}
