creating auth in prod with bcrypt encoding

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -12,8 +12,11 @@
 @import "Components/packages";
 @import "Components/reviews";
 @import "Components/footer";
-@import "Components/manager";
+
 
 @import "Components/about";
 @import "Components/offert";
 @import "Components/clients";
+
+@import "Components/login";
+@import "Components/manager";
