--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -784,45 +784,6 @@ body {
   background-color: white;
   z-index: 199; }
 
-.manager__section {
-  display: flex;
-  flex-direction: column;
-  background-color: #7db4b0;
-  margin: 5rem auto;
-  width: 90%; }
-  .manager__section h1 {
-    font-family: "Orbitron", sans-serif;
-    font-weight: 900;
-    text-transform: uppercase;
-    font-size: 3rem;
-    text-align: center; }
-  .manager__section--artikel {
-    margin: 5rem auto 0 auto;
-    width: 100%;
-    padding: 2rem; }
-    .manager__section--artikel h3 {
-      font-family: "Rajdhani", sans-serif;
-      font-size: 2rem;
-      font-weight: 900;
-      text-transform: uppercase; }
-    .manager__section--artikel p {
-      font-family: "Rajdhani", sans-serif;
-      font-size: 2.5rem;
-      text-align: center;
-      letter-spacing: .2rem; }
-    .manager__section--artikel textarea {
-      width: 100%;
-      padding: 1rem 2rem;
-      text-align: center;
-      font-family: "Rajdhani", sans-serif;
-      font-size: 2.5rem;
-      border: none;
-      background-color: #f6f9f9;
-      border-radius: 3px; }
-      .manager__section--artikel textarea:focus {
-        outline: none;
-        box-shadow: 0 0 1rem #94464b; }
-
 .about {
   overflow: hidden; }
   .about__mission {
@@ -1131,3 +1092,105 @@ body {
 .offert__advanced--para-icon {
   transform: translate(-50%, -50%) rotate(-45deg);
   color: rgba(148, 70, 75, 0.4); }
+
+.login {
+  margin-top: 0rem;
+  width: 100%;
+  padding: 2.5rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .login__header {
+    font-family: "Rajdhani", sans-serif;
+    font-size: 3rem;
+    letter-spacing: .2rem;
+    padding: 0 2rem; }
+  .login__form {
+    margin: 2.5rem auto;
+    width: 90%;
+    background-color: #0e1d1c;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    border-radius: 3px; }
+    @media only screen and (max-width: 40.5em) {
+      .login__form {
+        width: 100%;
+        border-radius: 0px; } }
+    .login__form--field {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      margin: 1rem auto; }
+      @media only screen and (max-width: 40.5em) {
+        .login__form--field {
+          width: 80%; } }
+      .login__form--field label {
+        font-family: "Rajdhani", sans-serif;
+        font-size: 2.5rem;
+        color: white; }
+      .login__form--field input {
+        border: none;
+        padding: 1rem 0;
+        font-size: 2rem;
+        text-align: center;
+        font-family: "Poiret One", cursive;
+        font-weight: 900;
+        border-radius: 10px; }
+        .login__form--field input:focus {
+          outline: none;
+          box-shadow: 0 0 1rem #be9093; }
+    .login__form button {
+      margin: 2rem auto;
+      border: none;
+      border-radius: 5px;
+      background-color: #582a2d;
+      padding: 1rem 5rem;
+      color: white;
+      font-family: "Rajdhani", sans-serif;
+      font-size: 2rem;
+      letter-spacing: .2rem;
+      cursor: pointer;
+      transition: all .3s; }
+      .login__form button:hover {
+        background-color: #94464b; }
+
+.manager__section {
+  display: flex;
+  flex-direction: column;
+  background-color: #7db4b0;
+  margin: 5rem auto;
+  width: 90%; }
+  .manager__section h1 {
+    font-family: "Orbitron", sans-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 3rem;
+    text-align: center; }
+  .manager__section--artikel {
+    margin: 5rem auto 0 auto;
+    width: 100%;
+    padding: 2rem; }
+    .manager__section--artikel h3 {
+      font-family: "Rajdhani", sans-serif;
+      font-size: 2rem;
+      font-weight: 900;
+      text-transform: uppercase; }
+    .manager__section--artikel p {
+      font-family: "Rajdhani", sans-serif;
+      font-size: 2.5rem;
+      text-align: center;
+      letter-spacing: .2rem; }
+    .manager__section--artikel textarea {
+      width: 100%;
+      padding: 1rem 2rem;
+      text-align: center;
+      font-family: "Rajdhani", sans-serif;
+      font-size: 2.5rem;
+      border: none;
+      background-color: #f6f9f9;
+      border-radius: 3px; }
+      .manager__section--artikel textarea:focus {
+        outline: none;
+        box-shadow: 0 0 1rem #94464b; }
