--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -38,6 +38,12 @@
     stroke: orangered;
     stroke-dashoffset: 70; } }
 
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
 ::-webkit-scrollbar {
   width: 7.5px;
   background-color: #7db4b0; }
@@ -1276,3 +1282,75 @@ body {
       font-size: 1.6rem;
       display: block;
       transform: rotate(-90deg); }
+
+.alert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  animation: slideLeft .3s ease-out;
+  z-index: 99; }
+  .alert__close {
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #582a2d;
+    border: 1px solid white;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all .3s; }
+    .alert__close:hover {
+      background-color: #94464b; }
+    .alert__close--icon {
+      font-size: 3rem;
+      color: white; }
+  .alert__message {
+    background-color: white;
+    padding: 5rem 2rem;
+    border-radius: 3px; }
+    .alert__message--text {
+      font-family: "Rajdhani", sans-serif;
+      font-size: 2.5rem;
+      text-align: center; }
+    .alert__message--buttons {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 5rem; }
+      .alert__message--buttons > *, .alert__message--buttons-complete {
+        display: block;
+        padding: 1rem 5rem;
+        color: white;
+        font-family: "Courier New", sans-serif;
+        font-size: 2rem;
+        cursor: pointer;
+        transition: all .3s;
+        border: none;
+        border-radius: 3px;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+        margin: 0 auto; }
+        .alert__message--buttons > *:hover, .alert__message--buttons-complete:hover {
+          transform: translateY(-3px);
+          box-shadow: 0 0.8rem 1rem rgba(0, 0, 0, 0.1); }
+      .alert__message--buttons-yes {
+        background-color: #469468; }
+      .alert__message--buttons-no {
+        background-color: #94464b; }
+      .alert__message--buttons-complete {
+        background-color: #469468;
+        margin-top: 5rem; }
+    .alert__message--icon {
+      margin: 2rem auto;
+      color: black;
+      font-size: 3rem;
+      font-weight: 300;
+      display: block;
+      animation: rotate 1s  ease-in infinite;
+      color: #46948f; }
