--- a/client/src/sass/_animations.scss
+++ b/client/src/sass/_animations.scss
@@ -54,3 +54,12 @@
     stroke-dashoffset: 70;
   }
 }
+
+@keyframes rotate{
+	0%{
+		transform:rotate(0deg);
+	}
+	100%{
+		transform:rotate(360deg);
+	}
+}
