--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -679,6 +679,7 @@ body {
             .footer__contact--data-social li {
               font-size: 4rem; } }
       .footer__contact--data-phone {
+        display: block;
         margin: 2rem 0 1rem 0;
         z-index: 9;
         display: flex;
@@ -687,9 +688,11 @@ body {
         text-decoration: none;
         font-family: "Poiret One", cursive;
         font-size: 2rem;
-        transition: all .3s; }
+        transition: all .15s; }
         .footer__contact--data-phone:hover {
-          color: #FFFF4D; }
+          display: block;
+          transform: scale(1.05) translateX(1.5rem);
+          color: #46948f; }
         @media only screen and (max-width: 26em) {
           .footer__contact--data-phone {
             font-size: 2.8rem; } }
@@ -712,7 +715,9 @@ body {
         font-size: 2rem;
         transition: all .3s; }
         .footer__contact--data-email:hover {
-          color: #FFFF4D; }
+          display: block;
+          transform: scale(1.05) translateX(1.5rem);
+          color: #46948f; }
         @media only screen and (max-width: 26em) {
           .footer__contact--data-email {
             font-size: 2.8rem; } }
@@ -853,6 +858,15 @@ body {
       font-size: 2.5rem;
       color: white;
       text-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.3); }
+  .about__image {
+    align-items: center;
+    margin: 0 auto 5rem auto;
+    animation: slideLeft .5s ease-out;
+    transition: all .5s; }
+    .about__image img {
+      border-radius: 0 4px 4px 0;
+      box-shadow: 1rem 0 1rem rgba(0, 0, 0, 0.3);
+      max-width: 100vw; }
   .about__quote {
     width: 100%;
     padding: 15rem 5%;
