--- a/client/src/sass/Components/_about.scss
+++ b/client/src/sass/Components/_about.scss
@@ -61,6 +61,18 @@
 			text-shadow: $shadow-text-small;
 		}
 	}
+	&__image{
+		align-items: center;
+		margin:0 auto 5rem auto;
+		animation:slideLeft .5s ease-out;
+		transition:all .5s;
+		
+		img{
+			border-radius: 0 4px 4px 0;
+			box-shadow:  1rem 0 1rem rgba(0,0,0,.3);
+			max-width:100vw;
+		}
+	}
 
 	&__quote{
 		width:100%;
